# pfbudget

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  categories.py  categories.yaml  initializer.py  logging.conf  main.py  parsers.py  parsers.yaml  pyproject.toml  reader.py  requirements.txt  setup.cfg  transaction.py
alembic/: env.py
alembic/versions/: 0ce89e987770_regex_rule.py  18572111d9ff_split_member_of_base_transaction.py  28556ab17c56_selector_back_to_transaction.py  287fe9e6682a_add_relationships.py  2d0891f1be11_available_categories_and_rules.py  325b901ac712_nordigen_tokens.py  37d80de801a7_inheritance.py  50ff1fbb8a00_init.py  60469d5dd2b0_drop_sqlalchemy_enum.py  6863dda76ea2_category_selector.py  6b293f78cc97_rule_inheritance.py  753c0bfb2062_rule_min_max.py  7adf89ec8d14_category_rule_date_format.py  83603bb7ef9c_amount_of_transactions_per_period.py  83f4c9837f6e_category_groups_and_relationships.py  8623e709e111_compact_category_selector.py  8b5d5fbc8211_transaction_based_rules.py  8cc9870b0d74_links.py  9028b0f3b985_tag_rules.py  952de57a3c43_start_end_date_rule.py  a910e1b2214d_rule_inheritance.py  b599dafcf468_selector_type_name_change.py  ce68ee15e5d2_change_bank_constraints.py  d18cbd50f7c6_category_schedule.py  d3534f493239_add_meal_card.py  d7f0401c1fd3_unified_schemas.py  e36e6321568e_rules_min_max_money.py  e455c78df789_divide_by_schemas.py  e77395969585_weekly_period.py
pfbudget/: __init__.py  __main__.py  categories.py  database.py  graph.py  parsers.py  report.py  runnable.py  state.py  tools.py  transactions.py  utils.py
pfbudget/cli/: argparser.py  interactive.py  runnable.py
pfbudget/common/: types.py
pfbudget/core/: categories.py  categorizer.py  command.py  manager.py  transactions.py
pfbudget/core/input/: input.py  json.py  nordigen.py  parsers.py
pfbudget/db/: client.py  exceptions.py  manager.py  model.py  postgresql.py  schema.py  sqlite.py
pfbudget/extract/: credentials.py  exceptions.py  extract.py  nordigen.py  parsers.py  psd2.py
pfbudget/input/: input.py  json.py  nordigen.py  parsers.py
pfbudget/load/: database.py  load.py
pfbudget/output/: __init__.py  csv.py  output.py
pfbudget/reporting/: graph.py  report.py
pfbudget/transform/: categorizer.py  exceptions.py  nullifier.py  tagger.py  transform.py
pfbudget/utils/: __init__.py  converters.py  serializer.py  utils.py
tests/: test_backup.py  test_command.py  test_database.py  test_load.py  test_psd2.py  test_transform.py
tests/mocks/: banks.py  categories.py  client.py  nordigen.py  transactions.py
